samples/_failures_safe/1761169294_3dde7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_309332f6.c:170:1: error: expected declaration specifiers or ‘...’ at end of input
  170 | void print_token_type(
      | ^~~~
